--- a/Untitled-3.html
+++ b/Untitled-3.html
@@ -20,6 +20,12 @@
 		max-height: 50%;
 	}
 </style>
+	<script>
+	var radius = 10;
+	var pi = 3.14;
+	
+	alert(2*radius*pi)
+</script>
 </head>
 <body>
       <div class="check01">
